Overview of changes in Glib 1.223
=================================

* Fix a few test failures.

Overview of changes in Glib 1.222
=================================

* Properly handle slashes in copyright footers passed to Glib::MakeHelper.
* Fix a test failure on s390.

Overview of changes in Glib 1.221
=================================

* Fix a few build and test suite issues.

Overview of changes in Glib 1.220
=================================

 Since 1.20x (the previous stable series)
 ----------------------------------------
  * Add constants Glib::SOURCE_CONTINUE and SOURCE_REMOVE for use in
    source-type callbacks.
  * Add Glib::Child::watch_add.
  * Add Glib::OptionContext and Glib::OptionGroup.
  * Allow calling Glib::Flags->as_arrayref directly, as an alternative to the
    @{} syntax.
  * Add Glib::ParamSpec->value_validate and Glib::ParamSpec->value_cmp.

 Since 1.214
 -----------
  * Nada.

Overview of changes in Glib 1.214
=================================

* Fix a leak in the handling of callback arguments.
* Fix many errors and glitches in the POD generated by Glib::GenPod.
* Fix some test suite issues and documentation glitches.

Overview of changes in Glib 1.213
=================================

* Make the various Glib::Flags methods more robust with respect to receiving
  undefined input.
* Correctly handle signals with no return type when invoking signal class
  closures.
* Deprecate Glib::MakeHelper->get_configure_requires_yaml in favor of
  ExtUtils::MakeMaker's new META_MERGE and META_ADD features.

Overview of changes in Glib 1.212
=================================

* Allow calling Glib::Flags->as_arrayref directly, as an alternative to the @{}
  syntax.
* Add Glib::ParamSpec->value_validate and Glib::ParamSpec->value_cmp.
* Add documentation for Glib->filename_to_uri and filename_from_uri.
* Always use Data::Dumper instead of Storable on MSWin32 for serialization work
  during documentation generation.